--- a/configration.properties
+++ b/configration.properties
@@ -4,3 +4,7 @@ browser=chrome
 sauceDemo=https://www.saucedemo.com/
 username=standard_user
 password=secret_sauce
+
+name=Name
+lastName=Lastname
+zip=44100
